// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tests on <GifGetterApp/> component component should render properly 1`] = `
<Fragment>
  <h2>
    Gif Getter
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;

exports[`tests on <GifGetterApp/> component should show a list of categories 1`] = `
<Fragment>
  <h2>
    Gif Getter
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="star wars"
      key="star wars"
    />
    <GifGrid
      category="lord of the ring"
      key="lord of the ring"
    />
  </ol>
</Fragment>
`;
